Updated About section and added a new project

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I’m Abdulrhman Daas, a computer programming student at Humber College. I’m passionate about coding and building projects that solve real-world problems. Outside of programming, I enjoy working out, playing soccer, and badminton. My goal is to become a skilled web developer and create impactful software solutions.</p>
+        <p>Hello! I'm Abdulrhman Daas, a computer programming student at Humber College. I'm passionate about coding and building projects that solve real-world problems. Recently, I completed a course on web development and built several interactive projects.</p>
         
     </section>
 
@@ -37,6 +37,14 @@
                 <h3>Project 2</h3>
                 <button class="toggle-btn">Show Details</button>
                 <p class="details" style="display: none;">This is a placeholder for Project 2. Stay tuned!</p>
+            </div>
+            <div class="project">
+                <h3>My New Project</h3>
+                <p>A web app I built using HTML, CSS, and JavaScript to showcase my skills.</p>
+                <button class="toggle-btn">Show Details</button>
+                <div class="details" style="display: none;">
+                    <p>Built with responsive design and interactive features.</p>
+                </div>
             </div>
         </div>
     </section>
