--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
+        <button id="dark-mode-toggle">Toggle Dark Mode</button>
     </header>
 
     <section id="about">
